# Cold-Dwell-Fatigue-of-Titanium-Alloys

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
Documentation/: inputs_and_cleanup_table.md
Python/: __init__.py  cli.py  config.py  create_jinja_templates.py  defaults.yaml  environment.yaml  forms.py  gui.py  merged.spec  postprocess.py  unit_tests.py  utils.py  utils_cli.py
Templates/: PW_ANG_routine_v65.j2  PW_CTF_routine_v65.j2  dream3d_config.yaml  template.env
src/microtexture/: __main__.py  cli.py  config.py  defaults.yaml  forms.py  gui.py  postprocess.py  unit_tests.py  utils.py
src/microtexture/templates/: PW_ANG_routine_v65.j2  PW_ANG_routine_v65.json  PW_CTF_routine_v65.json  template.env
